test/corpus/atoms.txt
================================================================================
Numbers
================================================================================

(defalias a (tap-hold 200 -5 8.5 x))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (identifier)
      (number)
      (number)
      (number)
      (identifier))))

================================================================================
Numeric prefix stays an identifier
================================================================================

(a 123abc 1-2 -x)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Variable and alias references
================================================================================

(deflayer base @cap $tap-time @sym-layer)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (alias_reference)
    (variable_reference)
    (alias_reference)))

================================================================================
Atoms with unusual characters
================================================================================

(deflayer base C-A-del S-9 ;foo a#b !x _ __ XX 🔣 ‹⇧)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Lone sigils are identifiers
================================================================================

($ @ r r# -)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)))
