test/corpus/comments.txt
================================================================================
Line comments
================================================================================

;; comment 1

()

(
  ;; comment 2
  item
)

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (list)
  (list
    (line_comment)
    (identifier)))

================================================================================
Single semicolon is not a comment
================================================================================

(a ;b foo;;bar)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Block comments
================================================================================

#||#

#|block_comment|#

#| block comment
line 2
line 3 |#

(a #| inline |# b)

#| bars ||| inside |#

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (block_comment)
  (block_comment)
  (list
    (identifier)
    (block_comment)
    (identifier))
  (block_comment))
