test/corpus/forms.txt
================================================================================
Empty list
================================================================================

()

( )

(

)

--------------------------------------------------------------------------------

(source_file
  (list)
  (list)
  (list))

================================================================================
Flat list
================================================================================

(defsrc
  lctl lmet lalt spc ralt rctl
)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Nested lists
================================================================================

(defcfg
  linux-dev ("/dev/input/by-path/platform-i8042-serio-0-event-kbd")
)

(deflayermap (my-alt))

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (string)))
  (list
    (identifier)
    (list
      (identifier))))

================================================================================
Deeply nested actions
================================================================================

(defalias
  cap (tap-hold 200 200 caps (layer-while-held nav))
)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (list
      (identifier)
      (number)
      (number)
      (identifier)
      (list
        (identifier)
        (identifier)))))

================================================================================
Stray top-level atoms recover
================================================================================

foo (a) bar

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (list
    (identifier))
  (identifier))
