test/corpus/strings.txt
================================================================================
Quoted strings
================================================================================

(xyz "a b c d" "" "with (parens) and ;; not a comment")

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (string)
    (string)
    (string)))

================================================================================
Raw strings
================================================================================

(defvar greeting r#"hello "world""#)

(push-msg r#"multi
line
string"#)

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (identifier)
    (raw_string))
  (list
    (identifier)
    (raw_string)))

================================================================================
String adjacent to atoms
================================================================================

(include "kanata.kbd")

--------------------------------------------------------------------------------

(source_file
  (list
    (identifier)
    (string)))
